<resources>
    <string name="app_name" translatable="false">Wabell</string>
    <string name="splash_text" translatable="false">For People , By People</string>
    <string name="splash_text_lang">Choose a language to continue</string>
    <string name="splash_text_ar">العربية</string>
    <string name="splash_text_en">English</string>
    <string name="from_hp">From</string>
    <string name="mExp">Month</string>
    <string name="yExp">Year</string>
    <string name="to_hp">To</string>
    <string name="thanks">Thanks For Payment</string>
    <string name="requestSub">Request subject(s)</string>
    <string name="rate_file">Enter the rate</string>
    <string name="noCer">No Certificates Found</string>
    <string name="last">Last Month</string>
    <string name="txtRequest">Tell us what you want to learn and our moderators will find your tutors</string>
    <string name="login">Login</string>
    <string name="mProfile">Tutor’s Profile</string>
    <string name="mas_filters">Tutors Filter</string>
    <string name="budget">Budget</string>
    <string name="rateings">Rating</string>
    <string name="rated">You already rated this user before</string>
    <string name="dis">Distance</string>
    <string name="sortBy">Sort By</string>
    <string name="rateTxt">Rate Student</string>
    <string name="next">Next</string>
    <string name="sRe">Submit Review</string>
    <string name="reView">Review</string>
    <string name="reViewHint">Say Something about your teacher</string>
    <string name="reViewHintStudent">Say Something about your Student</string>
    <string name="cancel">Cancel</string>
    <string name="search_word">Search .. </string>
    <string name="finish">Finish</string>
    <string name="featured">Featured Tutors</string>
    <string name="noThing">Please Select your Specialty</string>
    <string name="exp">Add Experience and Education</string>
    <string name="media">Upload Media</string>
    <string name="bio">Add your Biography</string>
    <string name="noReviews">This Tutor dose not have any Reviews</string>
    <string name="workDetails">Work details</string>
    <string name="register">Register</string>
    <string name="bios">Bio</string>
    <string name="apply">Apply</string>
    <string name="registeras">Register as</string>
    <string name="log_social">Log in with your Social account</string>
    <string name="log_email">Log in with your Phone or Email</string>
    <string name="log_phoneEmail">Phone or Email</string>
    <string name="pass">Password</string>
    <string name="hintChat">Enter your message here</string>
    <string name="conPass">Confirm Password</string>
    <string name="resetPass">Reset Password</string>
    <string name="city">City</string>
    <string name="emptyCity">Enter your city</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="forget_password">Forgot your Password?</string>
    <string name="registerTextNOAcc">Don’t have an account</string>
    <string name="registerNow">Register Now</string>
    <string name="txt_or">OR</string>
    <string name="txt_message">Message</string>
    <string name="title1">We’ve sent him the request.</string>
    <string name="title2">But we advise you to contact another tutor if you didn’t get a response in 24 hours.</string>
    <string name="txt_hint">Say Something to your tutor</string>
    <string name="fiTitle">Thank you for your registration</string>
    <string name="firestDe">Your application has been sent successfully to the moderators. your application is under assessment. One of our moderators will contact you soon.</string>
    <string name="done">Done</string>
    <string name="Continue">Continue</string>
    <string name="secTitle">Enjoy the free membership \n until your first call</string>
    <string name="secDe">Welcome on board. You will be visible to your customers until the first service call. After that, you will be required to subscribe on Wabell application to be visible to customers again. For now, Wabell will review your application and activate it after confirming your identity.</string>
    <string name="custom_dialog">Please Wait</string>
    <string name="login_success">Login Successfully</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="already">This Email is already taken</string>
    <string name="reviewAdded">Your Review Added Successfully</string>
    <string name="updatedSuccessfully">Your Profile Updated Successfully</string>
    <string name="reqSuccess">Your Request sent successfully</string>
    <string name="inValidData">Enter a valid data </string>
    <string name="change_ava">Change availability</string>
    <string name="regAs">Register as</string>
    <string name="teTutor">Tutor</string>
    <string name="teStudent">Student</string>
    <string name="tuAbout">About</string>
    <string name="reMessages">Messages</string>
    <string name="subPackages">You haven\' t subscribed to any plan. Subscribe to be visible to Customers</string>
    <string name="paymentHint">You’ve selected this plan</string>
    <string name="viewMessage">View Messages</string>
    <string name="reCalls">Calls</string>
    <string name="reCall">Call</string>
    <string name="Call_Now">Call Now</string>
    <string name="tuReviews">Reviews</string>
    <string name="teName">Name</string>
    <string name="Experience">Experience</string>
    <string name="example1">Ex: Math teacher at Alnajah School, 2013 - 2020 Math teacher at Alnajah School, 2010 - 2013</string>
    <string name="Education">Education</string>
    <string name="example2">Ex: King Fahd University, Master of Education,, 2013 - 2014 King Fahd University, Diploma of education, 2007 - 2011</string>
    <string name="teLocation">Location</string>
    <string name="tePhoneNum">Phone</string>
    <string name="txtPhoneNum">Phone Number</string>
    <string name="teEmail">Email</string>
    <string name="cname">Card Holder Name</string>
    <string name="hname">Holder Name</string>
    <string name="cnum">Card Number</string>
    <string name="expir">Expired</string>
    <string name="cvv">CVV</string>
    <string name="comPayment">Complete Payment</string>
    <string name="te1">By Register, you agree to the following </string>
    <string name="teTerms"> Terms </string>
    <string name="te2">and </string>
    <string name="tePrivacy">Privacy policy</string>
    <string name="te3">Already have an account?</string>
    <string name="ok">Ok</string>
    <string name="sendRequest">Send Request</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="await">awaiting for admin approval</string>
    <string name="block">You are blocked</string>
    <string name="similar">Similar Tutors</string>
    <string name="fav">Favorite</string>
    <string name="views">Views</string>
    <string name="currReq">Recent Requests</string>
    <string name="noReq">No Requests</string>
    <string name="v">Version 1.0</string>
    <string name="contact">Contact</string>
    <string name="powered">Powered By</string>
    <string name="aboutDetails">Wabell ‌is ‌a service application that connects people with people \n Use your knowledge,‌ expertise and time to serve residents in ‌your city . \n When you register as a Master, Wabell enables customers to connect with you to provide your specialized service \n Join the team and pass the word…</string>
    <string name="aboutUs">About Us</string>
    <string name="logout">Logout</string>
    <string name="ids">Id</string>
    <string name="profile">Profile</string>
    <string name="profilePersonal">Profile</string>
    <string name="req">Requests</string>
    <string name="subs">Subscription</string>
    <string name="payMent">Payment</string>
    <string name="packages">Packages</string>
    <string name="history">History</string>
    <string name="reqTopic">Request Specialty</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="searchTitle">Search Results</string>
    <string name="searchButton">Search</string>
    <string name="showing">Showing</string>
    <string name="resultFor">Result for </string>
    <string name="online">Online</string>
    <string name="update">Update</string>
    <string name="noCalls">No Calls</string>
    <string name="noMessages">No Messages</string>
    <string name="hintInlogs">Connect With Master’s on Wabell \n by beginning a new conversation.</string>
    <string name="find_masters">Find Tutor"'"s</string>
    <string name="offlines">Offline</string>
    <string name="connectWithTutors">Connect With Tutor’s on Wabell by beginning a new conversation.</string>
    <string name="offline">Offline until</string>
    <string name="viewProfile">View Profile</string>
    <string name="id">Upload Id</string>
    <string name="info">Max file size :5 MG available type : jpg , png </string>
    <string name="certificates">Upload Certificates and IDs</string>
    <string name="certificate">IDs and Certificates</string>
    <string name="error">Please try again</string>
    <string name="successPackage">Package Added Successfully</string>
    <string name="saved">Saved</string>
    <string name="reqs">Requested</string>
    <string name="delete">Deleted</string>
    <string name="newPassSuccess">New Password Added Successfully</string>
    <string name="match">Password Not Match</string>
    <string name="emailValid">Enter a valid Email</string>
    <string name="empty">Please Enter The Empty Fields</string>
    <string name="RateEmpty">Please Enter The Rate</string>
    <string name="codeSuccess">The Code sent Successfully</string>
    <string name="validPhone">Please Enter a valid phone number</string>
    <string name="terms">Sorry you must agree with our terms and Conditions</string>
    <string name="registerSuccess">Your account created Successfully</string>
    <string name="ver1">Phone Number Verification</string>
    <string name="ver2">Type the 4 digit code that’s been sent to your phone</string>
    <string name="ver3">Didn’t receive a code? </string>
    <string name="ver4">Resend Code</string>
    <string name="ver5">Verify</string>
    <string name="ver6">Change your phone number</string>
    <string name="sel_ur_special">Select your Specialty</string>
    <string name="tagLin">TagLine</string>
    <string name="example11">Tell your students about yourself</string>
    <string name="Biography">Biography</string>
    <string name="example12">Tell your students a little bit about yourself</string>
    <string name="price">Price Per Hour (SAR)</string>
    <string name="priceFi">Price (Highest to Lowest)</string>
    <string name="priceae">Price (Lowest to Highest)</string>
    <string name="avaDays">Available Days</string>
    <string name="allDays">All Days</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tues">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="avaTimes">Available times</string>
    <string name="all_day">All day</string>
    <string name="morning">Morning (8:00 - 11:59 AM)</string>
    <string name="afternoon">Afternoon (12:00 - 6:00 PM)</string>
    <string name="eve">Evening ( 6:00 - 12:00 PM)</string>
    <string name="weti3">Connecting People</string>
    <string name="wede3">Wabell is a service application that connects people with people.</string>
    <string name="weti2">Empowering Customers and Service Tutors</string>
    <string name="wede2">Register as a Customer to search, call, get served by Tutors in your city. Register as a Master, Wabell brings you customers to sell them your services</string>
    <string name="weti1">Welcome to Wabell</string>
    <string name="Save">Save</string>
</resources>