<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blue_close_24"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="15dp"
            android:id="@+id/close"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/close"
            android:text="@string/requestSub"
            android:textDirection="locale"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#279EFF"
            android:id="@+id/txt"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/txtRequest"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textDirection="locale"
            android:textColor="#7C79A6"
            android:id="@+id/txt2"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/border_btn_blue"
            android:hint="@string/reqTopic"
            android:paddingStart="10dp"
            android:paddingEnd="8dp"
            android:inputType="text"
            android:textDirection="locale"
            android:gravity="top"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/txt2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="15sp"
            android:layout_centerInParent="true"
            android:elevation="1.0dp"
            android:id="@+id/ed_request"
            />
        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_btn_style"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sendRequest"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/ed_request"
            android:textColor="@color/colorWhite"
            />
    </RelativeLayout>

</RelativeLayout>