<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="onDays"
            type="java.lang.Boolean" />
        <variable
            name="onTimes"
            type="java.lang.Boolean" />
        <variable
            name="handler"
            type="com.clixifi.wabell.ui.tutorwork.TutorWorkScreen.MyHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.tutorwork.TutorWorkScreen">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="#2D4379"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ed_price"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/border_btn_blue"
                    android:hint="30"
                    android:inputType="number"
                    android:layoutDirection="ltr"
                    android:padding="8dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="8dp"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/drop_down_24"
                    android:text="@string/avaDays"
                    android:textColor="#2D4379"
                    android:onClick="@{handler::avaDays}"
                    android:textSize="17sp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/avaDays"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:visibility="@{onDays == true ? View.VISIBLE : View.GONE}"
                    android:layout_marginEnd="10dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:gravity="center"
                        >
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            >
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBoxAll"
                                android:text="@string/allDays"
                                android:textColor="#7C79A6"
                                android:textSize="17sp"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            >
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBoxSat"
                                android:text="@string/sun"
                                android:textColor="#7C79A6"
                                android:textSize="17sp"
                                />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:gravity="center"
                        >
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            >
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBoxSun"
                                android:text="@string/mon"
                                android:textColor="#7C79A6"
                                android:textSize="17sp"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            >
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBoxMon"
                                android:text="@string/tues"
                                android:textColor="#7C79A6"
                                android:textSize="17sp"
                                />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:gravity="center"
                        >
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            >
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBoxTus"
                                android:text="@string/thu"
                                android:textColor="#7C79A6"
                                android:textSize="17sp"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            >
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBoxThu"
                                android:text="@string/wed"
                                android:textColor="#7C79A6"
                                android:textSize="17sp"
                                />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:gravity="center"
                        >
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            >
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBoxWed"
                                android:text="@string/fri"
                                android:textColor="#7C79A6"
                                android:textSize="17sp"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            >
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/checkBoxFri"
                                android:text="@string/sat"
                                android:textColor="#7C79A6"
                                android:textSize="17sp"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/drop_down_24"
                    android:text="@string/avaTimes"
                    android:textColor="#2D4379"
                    android:onClick="@{handler::avaTimes}"
                    android:textSize="17sp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/avaTimes"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:visibility="@{onTimes == true ? View.VISIBLE : View.GONE}"
                    android:layout_marginEnd="10dp"
                    >
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxAllDay"
                        android:text="@string/allDays"
                        android:textColor="#7C79A6"
                        android:textSize="17sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxMor"
                        android:text="@string/morning"
                        android:textColor="#7C79A6"
                        android:textSize="17sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxEve"
                        android:text="@string/eve"
                        android:textColor="#7C79A6"
                        android:textSize="17sp"
                        />
                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxafter"
                        android:text="@string/afternoon"
                        android:textColor="#7C79A6"
                        android:textSize="17sp"
                        />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/blue_btn_style"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/Save"
            android:id="@+id/btn_save"
            android:onClick="@{handler::save}"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorWhite"
            />
    </RelativeLayout>
</layout>