<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="handler"
            type="com.clixifi.wabell.ui.firstSplash.FirstSplashTutor.MyHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".ui.firstSplash.FirstSplashTutor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/firsticon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiTitle"
                android:textColor="#2D4379"
                android:textStyle="bold"
                android:textSize="21sp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firestDe"
                android:textColor="#2D4379"
                android:textAlignment="center"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                />
            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/blue_btn_style"
                android:text="@string/done"
                android:onClick="@{handler::onNext}"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </RelativeLayout>
</layout>